# gh-issue-notification

./: .gitignore  Cargo.toml
.github/workflows/: check_issues.yml
src/: main.rs
