[package]
name = "gh_issue_notification"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
